# sophisticated

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  make.sh  run.sh
src/: app_window.cpp  app_window.hpp  find_text_dialog.cpp  find_text_dialog.hpp  main.cpp  replace_text_dialog.cpp  replace_text_dialog.hpp
